Fix alignment of TM suggestions involving RTL text
Now the original text is always left aligned and the suggestion is right
aligned regardless of the over all page direction.

Does not seem to affect suggestions not involving RTL text.

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -768,28 +768,12 @@ html[dir="rtl"] .suggestion-vote
     background-color: #f1f7e4;
 }
 
-.suggestion-original,
-#tm-results .suggestion-translation
-{
-    display: inline-block;
-}
-
 .suggestion-original
 {
     font-weight: bolder;
     color: #130f30;
     padding-right: 1em;
-}
-
-#suggestion[dir="rtl"] .suggestion-original
-{
-    padding-right: auto;
-    padding-left: 1em;
-}
-
-.suggestion-translation[dir="rtl"]
-{
-    text-align: right;
+    float: left;
 }
 
 #target-item-gravatar a
